--- a/scheduler_wasm/web/index.html
+++ b/scheduler_wasm/web/index.html
@@ -3,20 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Scheduler WASM Demo</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      margin-bottom: 1rem;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 0.5rem;
-    }
-    #output.error {
-      color: red;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>WASM Scheduler Demo</h1>
