--- a/scheduler_wasm/web/index.html
+++ b/scheduler_wasm/web/index.html
@@ -3,59 +3,64 @@
 <head>
   <meta charset="UTF-8" />
   <title>Scheduler WASM Demo</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      margin-bottom: 1rem;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 0.5rem;
-    }
-    #output.error {
-      color: red;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>WASM Scheduler Demo</h1>
 
-  <!-- Task creation form -->
-  <section style="border: 1px solid #ccc; padding: 1rem; margin-bottom: 1rem;">
-    <h2>Add a Task</h2>
-    <label>
-      Task Name:
-      <input type="text" id="task-name" />
-    </label>
-    <br /><br />
-    <label>
-      Window Type:
-      <select id="window-type">
-        <option value="anchor" selected>Anchor</option>
-        <option value="range">Range</option>
-      </select>
-    </label>
-    <br /><br />
+  <!-- Top container with settings and task creation -->
+  <div class="top-container">
+    <!-- Task creation form (Left) -->
+    <section class="add-task-section">
+      <h2>Add a Task</h2>
+      <label>
+        Task Name:
+        <input type="text" id="task-name" />
+      </label>
+      <br /><br />
+      <label>
+        Window Type:
+        <select id="window-type">
+          <option value="anchor" selected>Anchor</option>
+          <option value="range">Range</option>
+        </select>
+      </label>
+      <br /><br />
 
-    <!-- Anchor fields (visible by default) -->
-    <div id="anchor-inputs">
-      <label>Anchor Time (HH:MM): <input type="text" id="anchor-time" value="09:00" /></label>
-    </div>
+      <!-- Anchor fields (visible by default) -->
+      <div id="anchor-inputs">
+        <label>Anchor Time (HH:MM): <input type="text" id="anchor-time" value="09:00" /></label>
+      </div>
 
-    <!-- Range fields (hidden by default) -->
-    <div id="range-inputs" style="display: none;">
-      <label>Start (HH:MM): <input type="text" id="range-start" value="13:00" /></label>
+      <!-- Range fields (hidden by default) -->
+      <div id="range-inputs" style="display: none;">
+        <label>Start (HH:MM): <input type="text" id="range-start" value="13:00" /></label>
+        <br />
+        <label>End (HH:MM): <input type="text" id="range-end" value="15:00" /></label>
+      </div>
+
       <br />
-      <label>End (HH:MM): <input type="text" id="range-end" value="15:00" /></label>
-    </div>
+      <button id="btn-add-task">Add Task</button>
+    </section>
 
-    <br />
-    <button id="btn-add-task">Add Task</button>
-  </section>
+    <!-- Day settings panel (Right) -->
+    <section class="settings-section">
+      <h2>Schedule Settings</h2>
+      <div class="settings-grid">
+        <div>
+          <label for="day-start">Day Start:</label>
+          <input type="text" id="day-start" value="08:00" pattern="\d{1,2}:\d{2}" title="Format: HH:MM">
+        </div>
+        <div>
+          <label for="day-end">Day End:</label>
+          <input type="text" id="day-end" value="18:00" pattern="\d{1,2}:\d{2}" title="Format: HH:MM">
+        </div>
+      </div>
+    </section>
+  </div>
 
   <!-- Table of tasks -->
-  <section style="border: 1px solid #ccc; padding: 1rem;">
+  <section>
     <h2>Task List</h2>
     <table id="task-table">
       <thead>
@@ -64,7 +69,7 @@
           <th>Name</th>
           <th>Window Type</th>
           <th>Time(s)</th>
-          <th>Remove</th> <!-- New column for Remove button -->
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody><!-- Dynamically populated --></tbody>
@@ -73,7 +78,7 @@
     <button id="btn-schedule">Solve!</button>
   </section>
 
-  <section style="border:1px solid #ccc; padding:1rem; margin-top:1rem;">
+  <section>
     <h2>Schedule Result</h2>
     <!-- We'll show an error if the solver returns text that's not valid JSON -->
     <div id="output" class=""></div>
@@ -90,226 +95,19 @@
     </table>
   </section>
 
-  <script type="module">
-    import init, { schedule_from_json } from "./scheduler_wasm.js";
+  <script type="module" src="scheduler.js"></script>
 
-    // We'll keep tasks in a JavaScript array
-    let tasks = [
-      { name: "Task A", windows: [{ Anchor: 540 }] },       // 9:00
-      { name: "Lunch",  windows: [{ Anchor: 720 }] },       // 12:00
-      { name: "Task B", windows: [{ Range: [780, 900] }] }  // 13:00–15:00
-    ];
-
-    // Helper: parse "HH:MM" -> integer minutes
-    function parseHHMM(value) {
-      const [hh, mm] = value.split(":").map(x => parseInt(x, 10));
-      return hh * 60 + mm;
-    }
-
-    // Convert minutes back to "HH:MM"
-    function formatMinutes(m) {
-      const hh = Math.floor(m / 60);
-      const mm = m % 60;
-      return `${String(hh).padStart(2, "0")}:${String(mm).padStart(2, "0")}`;
-    }
-
-    // Render the task table
-    function renderTasks() {
-      const tbody = document.querySelector("#task-table tbody");
-      tbody.innerHTML = ""; // clear old rows
-
-      tasks.forEach((task, idx) => {
-        const tr = document.createElement("tr");
-
-        // Row # / ID
-        const tdNum = document.createElement("td");
-        tdNum.textContent = idx + 1;
-        tr.appendChild(tdNum);
-
-        // Name
-        const tdName = document.createElement("td");
-        tdName.textContent = task.name;
-        tr.appendChild(tdName);
-
-        // Window type
-        const tdType = document.createElement("td");
-        let wtype = "?";
-        if (task.windows?.[0]?.Anchor !== undefined) {
-          wtype = "Anchor";
-        } else if (task.windows?.[0]?.Range !== undefined) {
-          wtype = "Range";
-        }
-        tdType.textContent = wtype;
-        tr.appendChild(tdType);
-
-        // Time(s)
-        const tdTime = document.createElement("td");
-        if (wtype === "Anchor") {
-          const anchorVal = task.windows[0].Anchor;
-          tdTime.textContent = formatMinutes(anchorVal);
-        } else if (wtype === "Range") {
-          const [startVal, endVal] = task.windows[0].Range;
-          tdTime.textContent = `${formatMinutes(startVal)} - ${formatMinutes(endVal)}`;
-        }
-        tr.appendChild(tdTime);
-
-        // Remove button
-        const tdRemove = document.createElement("td");
-        const removeBtn = document.createElement("button");
-        removeBtn.textContent = "X";
-        removeBtn.onclick = () => removeTask(idx);
-        tdRemove.appendChild(removeBtn);
-        tr.appendChild(tdRemove);
-
-        tbody.appendChild(tr);
-      });
-    }
-
-    // Remove a task by index
-    function removeTask(index) {
-      tasks.splice(index, 1);
-      renderTasks();
-    }
-
-    // Add a new task based on form
-    function addTask() {
-      const nameField = document.getElementById("task-name");
-      const nameVal = nameField.value.trim();
-      if (!nameVal) {
-        alert("Please enter a task name.");
-        return;
-      }
-
-      const wtype = document.getElementById("window-type").value;
-
-      if (wtype === "anchor") {
-        const anchorVal = document.getElementById("anchor-time").value.trim();
-        if (!anchorVal.match(/^\d{1,2}:\d{2}$/)) {
-          alert("Anchor time must be in HH:MM format.");
-          return;
-        }
-        const anchorMin = parseHHMM(anchorVal);
-
-        tasks.push({
-          name: nameVal,
-          windows: [ { Anchor: anchorMin } ]
-        });
-
-      } else if (wtype === "range") {
-        const startVal = document.getElementById("range-start").value.trim();
-        const endVal   = document.getElementById("range-end").value.trim();
-
-        if (!startVal.match(/^\d{1,2}:\d{2}$/) || !endVal.match(/^\d{1,2}:\d{2}$/)) {
-          alert("Range times must be in HH:MM format.");
-          return;
-        }
-        const startMin = parseHHMM(startVal);
-        const endMin   = parseHHMM(endVal);
-        if (endMin <= startMin) {
-          alert("End time must be > start time.");
-          return;
-        }
-
-        tasks.push({
-          name: nameVal,
-          windows: [ { Range: [startMin, endMin] } ]
-        });
-      }
-
-      // Clear fields
-      nameField.value = "";
-      document.getElementById("anchor-time").value = "09:00";
-      document.getElementById("range-start").value = "13:00";
-      document.getElementById("range-end").value   = "15:00";
-
-      // Re-render table
-      renderTasks();
-    }
-
-    // Render the final schedule result in a table
-    function renderScheduleResult(scheduleData) {
-      const scheduleTable = document.getElementById("schedule-table");
-      const tbody = scheduleTable.querySelector("tbody");
-      tbody.innerHTML = "";
-
-      scheduleData.forEach((item, idx) => {
-        // item is [ taskName, minutesFloat ]
-        const tr = document.createElement("tr");
-
-        // # column
-        const tdNum = document.createElement("td");
-        tdNum.textContent = idx + 1;
-        tr.appendChild(tdNum);
-
-        // Task name
-        const tdName = document.createElement("td");
-        tdName.textContent = item[0] || "???";
-        tr.appendChild(tdName);
-
-        // Time
-        const tdTime = document.createElement("td");
-        const rawMinutes = item[1] || 0;
-        // Convert f64 to integer
-        const minutes = Math.round(rawMinutes);
-        tdTime.textContent = formatMinutes(minutes);
-        tr.appendChild(tdTime);
-
-        tbody.appendChild(tr);
-      });
-
-      // Show the table
-      scheduleTable.style.display = "table";
-    }
-
-    function solveSchedule() {
-      // Convert tasks array to JSON string
-      const jsonInput = JSON.stringify(tasks);
-
-      // Call the WASM schedule function
-      const result = schedule_from_json(jsonInput);
-
-      // Check if the result is valid JSON
-      let scheduleData = null;
-      const outputEl = document.getElementById("output");
-      outputEl.classList.remove("error");
-      outputEl.textContent = "";
-
-      try {
-        // Attempt to parse as JSON => e.g. [ ["Task A", 480.0], ... ]
-        scheduleData = JSON.parse(result);
-      } catch (err) {
-        // It's not valid JSON => an error message
-        outputEl.classList.add("error");
-        outputEl.textContent = result;
-        // Hide schedule table
-        document.getElementById("schedule-table").style.display = "none";
-        return;
-      }
-
-      // If we got here, it's parsed successfully. Render the table of results
-      renderScheduleResult(scheduleData);
-    }
-
-    async function run() {
-      await init(); // Load WASM
-
-      // Set up form toggling (anchor vs range)
-      const windowTypeEl = document.getElementById("window-type");
-      windowTypeEl.onchange = () => {
-        const typeVal = windowTypeEl.value;
-        document.getElementById("anchor-inputs").style.display = (typeVal === "anchor") ? "block" : "none";
-        document.getElementById("range-inputs").style.display  = (typeVal === "range")  ? "block" : "none";
-      };
-
-      // Hook up button events
-      document.getElementById("btn-add-task").onclick = addTask;
-      document.getElementById("btn-schedule").onclick = solveSchedule;
-
-      // Render initial table
-      renderTasks();
-    }
-
-    run();
-  </script>
+  <div id="edit-modal" style="display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); z-index: 1000;">
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border-radius: 8px; width: 300px;">
+      <h3 id="edit-modal-title">Edit Task</h3>
+      <div id="edit-modal-content">
+        <!-- Filled dynamically by JS -->
+      </div>
+      <div style="margin-top: 20px; display: flex; justify-content: flex-end; gap: 10px;">
+        <button id="edit-modal-cancel">Cancel</button>
+        <button id="edit-modal-save">Save</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
